--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "0.1.0",
 	"devDependencies": {
 		"@types/node": "^14.14.31",
-		"typescript": "^4.6.4"
+		"typescript": "^4.6.4",
+		"jest": "^28.1.0"
 	},
 	"dependencies": {
 		"@eversdk/core": "^1.33.1",
