--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
 	"name": "flex-sdk-js",
 	"version": "0.1.0",
+	"scripts": {
+		"docs": "typedoc flex/index.ts --excludePrivate --excludeProtected --excludeInternal --out docs"
+	},
 	"devDependencies": {
 		"@types/node": "^14.14.31",
 		"typescript": "^4.6.4",
-		"jest": "^28.1.0"
+		"jest": "^28.1.0",
+		"typedoc": "^0.22.11"
 	},
 	"dependencies": {
 		"@eversdk/core": "^1.33.1",
