--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     },
     "devDependencies": {
         "@eversdk/lib-node": "^1.37.0",
-        "@types/jest": "^27.4.1",
         "@types/node": "^16.0.1",
         "@typescript-eslint/eslint-plugin": "^5.19.0",
         "@typescript-eslint/parser": "^5.19.0",
@@ -25,10 +24,9 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-jest": "^26.1.4",
         "eslint-plugin-prettier": "^4.0.0",
-        "jest": "^27.5.1",
         "prettier": "^2.3.2",
         "rimraf": "^3.0.2",
-        "ts-jest": "^27.1.4",
+        "@playwright/test": "^1.28.1",
         "typedoc": "^0.23.11",
         "typescript": "^4.6.3"
     }
