--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/node": "^16.0.1",
         "@typescript-eslint/eslint-plugin": "^5.19.0",
         "@typescript-eslint/parser": "^5.19.0",
+        "allure-playwright": "^2.0.0-beta.19",
         "eslint": "^7.30.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-jest": "^26.1.4",
